--- a/app/scripts/views/biz/subject_group/update.html
+++ b/app/scripts/views/biz/subject_group/update.html
@@ -14,10 +14,9 @@
         }
 
         .subject-pro-img > .subject-pro-img-sub {
-            display: flex;
+            /*display: flex;*/
             /*width: 100%;*/
-            height: 150px;
-            min-height: 150px;
+            min-height: 100px;
             border: 1px solid #ddd;
             padding: 10px;
             border-left: 0;
@@ -26,18 +25,27 @@
         .subject-pro-img > .subject-pro-img-sub:first-child {
             border-left: 1px solid #ddd;
         }
+
         .subject-pro-img > .subject-pro-img-sub:last-child {
             border-left: 1px solid #ddd;
             margin-left: 10px;
         }
 
-        .subject-pro-img > .subject-pro-img-sub > img {
-            display: inline;
-            width: 120px;
-            height: 120px;
+        .subject-pro-img > .subject-pro-img-sub > .subject-pro-img-sub-up {
+            display: flex;
         }
 
-        .subject-pro-img > .subject-pro-img-sub > .desc {
+        .subject-pro-img > .subject-pro-img-sub > .subject-pro-img-sub-up > img {
+            max-height: 100px;
+            max-width: 100px;
+        }
+
+        .subject-pro-img > .subject-pro-img-sub > .subject-pro-img-sub-up > div {
+            display: inline;
+            margin: 10px 0 0 10px;
+        }
+
+        .subject-pro-img > .subject-pro-img-sub .desc {
             display: inline-flex;
             flex: 1;
             font-size: 12px;
@@ -63,40 +71,42 @@
                                     <ul class="row subject-pro">
                                         <li class="subject-pro-img"
                                             ng-repeat="(key,value) in subjects_group|orderBy:'key'"
-                                            ng-init="value.empty = [1,2,3];value.empty.length = (3-value.length);value.sub_index = $index">
-                                            <div class="subject-pro-img-sub col-sm-3 " ng-repeat="item in value">
-                                                <img ng-src="{{item.share_pic.pic_url+'?/thumbnail/120X120'}}">
+                                            ng-init="value.empty = [1,2,3,4,5];value.empty.length = (5-value.length);value.sub_index = $index">
+                                            <div class="subject-pro-img-sub col-sm-2 " ng-repeat="item in value">
+                                                <div class="subject-pro-img-sub-up">
+                                                    <img ng-src="{{item.share_pic.pic_url+'?/thumbnail/120X120'}}">
+                                                    <div class="">
+                                                        <a class="btn btn-info btn-xs btn-rounded"
+                                                           ng-disabled="item.in_subject"
+                                                           ui-sref="main.subject.update({subject_id:item.subject_id})">
+                                                            &nbsp;详情&nbsp;</a>
+                                                        <a class="btn btn-primary btn-xs btn-rounded"
+                                                           ng-disabled="item.in_subject"
+                                                           ng-click="add_update_subject(key,value,$index)">
+                                                            &nbsp;修改&nbsp;</a>
+                                                        <a class="btn btn-danger btn-xs btn-rounded"
+                                                           ng-disabled="item.in_subject"
+                                                           ng-click="sub_subject(key,value,$index)">
+                                                            &nbsp;移除&nbsp;</a>
+                                                    </div>
+                                                </div>
                                                 <div class="desc">
                                                     <ul class="subject-pro-ul">
                                                         <li>专题ID：<span ng-bind="item.subject_id"></span></li>
                                                         <li>名称：
-                                                                <span ng-bind="item.name |characters:12:true"
-                                                                      tooltip-placement="bottom"
-                                                                      tooltip="{{item.name}}"></span>
+                                                            <span ng-bind="item.name |characters:12:true"
+                                                                  tooltip-placement="bottom"
+                                                                  tooltip="{{item.name}}"></span>
                                                         </li>
                                                         <li>简介：
-                                                                <span ng-bind="item.brief|characters: 12:true"
-                                                                      tooltip-placement="bottom"
-                                                                      tooltip="{{item.brief}}"></span>
-                                                        </li>
-                                                        <li>
-                                                            <a class="btn btn-info btn-xs btn-rounded"
-                                                               ng-disabled="item.in_subject"
-                                                               ui-sref="main.subject.update({subject_id:item.subject_id})">
-                                                                &nbsp;详情&nbsp;</a>
-                                                            <a class="btn btn-primary btn-xs btn-rounded"
-                                                               ng-disabled="item.in_subject"
-                                                               ng-click="add_update_subject(key,value,$index)">
-                                                                &nbsp;修改&nbsp;</a>
-                                                            <a class="btn btn-danger btn-xs btn-rounded"
-                                                               ng-disabled="item.in_subject"
-                                                               ng-click="sub_subject(key,value,$index)">
-                                                                &nbsp;移除&nbsp;</a>
+                                                            <span ng-bind="item.brief|characters: 12:true"
+                                                                  tooltip-placement="bottom"
+                                                                  tooltip="{{item.brief}}"></span>
                                                         </li>
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <div class="subject-pro-img-sub col-sm-3 " ng-repeat="empty in value.empty">
+                                            <div class="subject-pro-img-sub col-sm-2 " ng-repeat="empty in value.empty">
                                                 <ul class="subject-pro-ul">
                                                     <li>
                                                         <a class="btn btn-primary btn-lg btn-rounded"
@@ -106,7 +116,7 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="subject-pro-img-sub col-sm-3">
+                                            <div class="subject-pro-img-sub col-sm-2">
                                                 <ul class="subject-pro-ul">
                                                     <li>
                                                         <h3><span class="label label-info"
