--- a/app/scripts/views/biz/resource/update.html
+++ b/app/scripts/views/biz/resource/update.html
@@ -8,7 +8,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>资源库</h4>
-                        <div form-image text="资源库图片" ng-model="_param.pics" max="100" required="true"></div>
+                        <div form-audio text="资源库图片" ng-model="_param.pics" max="100" required="true" token="mp3"></div>
                     </div>
                 </div>
                 <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
