add web 退光页面 add

--- a/app/scripts/views/biz/web/update.html
+++ b/app/scripts/views/biz/web/update.html
@@ -17,10 +17,14 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>生成结果</h4>
-                        <div form-textarea="" text="URL" ng-model="web_url"></div>
+                        <div form-input text="备注" ng-model="param.remark" placeholder="备注" required="true"></div>
+                        <h4>生成推广网址</h4>
+                        <div form-textarea="" text="URL" ng-model="param.full_url" ng-disabled="true"></div>
                     </div>
                 </div>
+                <div form-error-block></div>
+                <a class="btn btn-success btn-rounded" show-role="'{{$stateParams.product_id?'admin,op':''}}'"
+                   ng-disabled="FormBody.$invalid" ng-click="submit()">保存推广网址</a>
             </form>
         </div>
     </div>
