生成网址推广 保存到数据库

--- a/app/scripts/views/biz/web/update.html
+++ b/app/scripts/views/biz/web/update.html
@@ -19,7 +19,7 @@
                     <div class="panel-body">
                         <div form-input text="备注" ng-model="param.remark" placeholder="备注" required="true"></div>
                         <h4>生成推广网址</h4>
-                        <div form-textarea="" text="URL" ng-model="param.full_url" ng-disabled="true"></div>
+                        <div form-textarea="" text="URL" ng-model="param.full_url"></div>
                     </div>
                 </div>
                 <div form-error-block></div>
