--- a/app/scripts/views/container/login.html
+++ b/app/scripts/views/container/login.html
@@ -17,7 +17,7 @@
                     <div class="form-group">
                         <input type="text" ng-model="usercode" class="form-control input-underline pull-left"
                                placeholder="验证码" style="width:60%">
-                        <a class="btn btn-white btn-outline" ng-click="get_verify_code()"
+                        <a class="btn btn-white btn-outline pull-right" ng-click="get_verify_code()"
                            ng-disabled="disabled_get_verify_code">获取验证码
                             <span ng-if="remain_time<time_count" ng-bind="remain_time"></span>
                         </a>
