--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -24,7 +24,7 @@
                              source="[{text:'游学',value:'游学'},{text:'DIY',value:'DIY'},{text:'外语',value:'外语'},
                              {text:'才艺',value:'才艺'},{text:'摄影',value:'摄影'},{text:'乐园',value:'乐园'},
                              {text:'微课',value:'微课'},{text:'运动',value:'运动'},{text:'科技创意',value:'科技创意'}
-                             ,{text:'其他',value:'其他'}]"
+                             ,{text:'演出',value:'演出'},{text:'其他',value:'其他'}]"
                              source-api=""></div>
                         <div form-checkbox text="课程分类" ng-model="course_category" required="true" default="'德'"
                              source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},
@@ -116,7 +116,7 @@
                         <!--<div form-radio text="拼团类型" type="radio" ng-model="param.category" required="true" default="2"-->
                         <!--source="[{text:'众筹',value:'3'},{text:'一起玩',value:'4'}]"-->
                         <!--source-api=""></div>-->
-                        <div form-radio text="拼团类型" type="radio" ng-model="param.category" required="true" default="2"
+                        <div form-radio text="活动类型" type="radio" ng-model="param.category" required="true" default="2"
                              source="[{text:'人数团',value:'2'},{text:'直接买',value:'3'},{text:'直接买+人数团',value:'4'}]"
                              source-api="" ng-disabled="$stateParams.product_id"></div>
                         <div form-table text="活动类目" ng-model="param.options" max="1"
