--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -26,9 +26,16 @@
                              {text:'微课',value:'微课'},{text:'运动',value:'运动'},{text:'科技创意',value:'科技创意'}
                              ,{text:'演出',value:'演出'},{text:'其他',value:'其他'}]"
                              source-api=""></div>
+                        <!--<div form-checkbox text="能力标签" ng-model="ability_label" required="true" default=""-->
+                             <!--source="[{text:'音乐感知力',value:'音乐感知力'},{text:'语言能力',value:'语言能力'},-->
+                             <!--{text:'想象力',value:'想象力'},{text:'动手能力',value:'动手能力'},{text:'观察力',value:'观察力'},-->
+                             <!--{text:'专注力',value:'专注力'},{text:'表达沟通能力',value:'表达沟通能力'},{text:'运动能力',value:'运动能力'},-->
+                             <!--{text:'逻辑思维能力',value:'逻辑思维能力'},{text:'记忆力',value:'记忆力'},{text:'理解能力',value:'理解能力'},-->
+                             <!--{text:'自我管理能力',value:'自我管理能力'},{text:'团队协作能力',value:'团队协作能力'},{text:'社交能力',value:'社交能力'}-->
+                             <!--]" source-api=""></div>-->
                         <div form-checkbox text="课程分类" ng-model="course_category" required="true" default="'德'"
-                             source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},
-                             {text:'劳',value:'5'}]" source-api=""></div>
+                        source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},
+                        {text:'劳',value:'5'}]" source-api=""></div>
 
                         <div form-input text="最小年龄" ng-model="param.act_min_age" type="number" min="0"></div>
                         <div form-input text="最大年龄" ng-model="param.act_max_age" type="number" min="0"></div>
@@ -39,7 +46,7 @@
                         <div class="form-group"
                              ng-show="param.vip_promotion_type == 1 || param.vip_promotion_type == 2">
                             <div class="form_element">
-                                <label class="col-sm-2 control-label">设置折扣或者减额&nbsp;&nbsp;</label>
+                                <label class="col-sm-2 control-label">设置折扣或者减额</label>
                                 <div class="col-sm-2">
                                     <input class="form-control text-right" ng-model="vip_discount"
                                            ng-blur="reset_vip_discount()"
