--- a/app/scripts/views/biz/exchangecode/update.html
+++ b/app/scripts/views/biz/exchangecode/update.html
@@ -25,6 +25,8 @@
 
                         <div form-input text="优惠券总量" ng-model="param.total" required="true" type="number"></div>
 
+                        <div form-input text="有效天数" ng-model="param.valid_days" required="true" type="number"></div>
+
                         <div form-date-time text="上线时间" ng-model="param.start_time" required="true"></div>
 
                         <div form-date-time text="过期时间" ng-model="param.expire_time" required="true"></div>
