--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -34,7 +34,7 @@
                         {text:'自我管理',value:'自我管理'},{text:'团队协作',value:'团队协作'},{text:'社交能力',value:'社交能力'}
                         ]" source-api=""></div>
                         <!--<div form-checkbox text="课程分类" ng-model="course_category" required="true" default="'德'"-->
-                             <!--source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},-->
+                        <!--source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},-->
                         <!--{text:'劳',value:'5'}]" source-api=""></div>-->
 
                         <div form-input text="最小年龄" ng-model="param.act_min_age" type="number" min="0"></div>
@@ -111,8 +111,22 @@
                             </div>
                         </div>
 
-                        <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
-                        <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
+                        <div class="form-group">
+                            <div class="col-sm-8 col-sm-offset-2">
+                                <div class="col-sm-2">
+                                    <a class="btn btn-info btn-rounded" ng-click="toggleShowTime();"
+                                       ng-bind="showTime?'显示活动时间时分':'不显示活动时间时分'"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div form-date ng-show="showTime" text="活动开始时间" ng-model="param.act_start_time"
+                             required="true"></div>
+                        <div form-date ng-show="showTime" text="活动结束时间" ng-model="param.act_end_time"
+                             required="true"></div>
+                        <div form-date-time ng-show="!showTime" text="活动开始时间" ng-model="param.act_start_time"
+                             required="true"></div>
+                        <div form-date-time ng-show="!showTime" text="活动结束时间" ng-model="param.act_end_time"
+                             required="true"></div>
                         <div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>
                         <div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>
                     </div>
