商品 增加体验会员选项 会员列表增加会员属性

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -61,7 +61,7 @@
                         <div form-radio text="是否在日历中显示" ng-model="param.show_in_calendar" default="1"
                              source="[{text:'显示',value:'1'},{text:'不显示',value:'2'}]" required="true"></div>
                         <div form-radio text="是否限制仅会员可购买" ng-model="param.vip_buy" default="1"
-                             source="[{text:'仅会员',value:'1'},{text:'不限制',value:'2'}]" required="true"></div>
+                             source="[{text:'仅会员',value:'1'},{text:'体验会员',value:'3'},{text:'不限制',value:'2'}]" required="true"></div>
 
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
                              min="1" required="true"></div>
