--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -110,7 +110,7 @@
                                           district="param.district" time-stamp="timeStamp"></baidumap>
                             </div>
                         </div>
-
+                        <hr>
                         <div class="form-group">
                             <div class="col-sm-8 col-sm-offset-2">
                                 <div class="col-sm-2">
@@ -224,6 +224,8 @@
                         <div form-radio text="是否显示在列表" ng-model="param.visible" required="true" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                         <div form-input text="排序" ng-model="param.order_by" type="number" min="0"></div>
+                        <div form-radio text="是否绑定手机号" ng-model="param.enable_bind_mobile" default="1"
+                             source="[{text:'需要',value:'1'},{text:'不需要',value:'2'}]" required="true"></div>
                     </div>
                 </div>
 
