--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -61,7 +61,8 @@
                         <div form-radio text="是否在日历中显示" ng-model="param.show_in_calendar" default="1"
                              source="[{text:'显示',value:'1'},{text:'不显示',value:'2'}]" required="true"></div>
                         <div form-radio text="是否限制仅会员可购买" ng-model="param.vip_buy" default="1"
-                             source="[{text:'仅会员',value:'1'},{text:'会员+体验会员',value:'3'},{text:'不限制',value:'2'}]" required="true"></div>
+                             source="[{text:'仅会员',value:'1'},{text:'会员+体验会员',value:'3'},{text:'不限制',value:'2'}]"
+                             required="true"></div>
 
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
                              min="1" required="true"></div>
@@ -143,24 +144,24 @@
                         <div form-table text="活动类目" ng-model="param.options" max="1"
                              ng-show="param.category!=4"
                              columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
-                             {'name': '类目', 'field': 'option_name'},
-                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
-                             {'name': '库存', 'field': 'option_inventory'},
-                             {'name': '排序', 'field': 'order_by',type:'number',min:'0'}]"></div>
+                             {'name': '类目', 'field': 'option_name',required:'true'},
+                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2',required:'true'},
+                             {'name': '库存', 'field': 'option_inventory',required:'true'},
+                             {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
                         <div form-table text="直接买活动类目" ng-model="param.options" max="1"
                              ng-show="param.category==4"
                              columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
-                             {'name': '类目', 'field': 'option_name'},
-                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
-                             {'name': '库存', 'field': 'option_inventory'},
-                             {'name': '排序', 'field': 'order_by',type:'number',min:'0'}]"></div>
+                             {'name': '类目', 'field': 'option_name',required:'true'},
+                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2',required:'true'},
+                             {'name': '库存', 'field': 'option_inventory',required:'true'},
+                             {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
                         <div form-table text="人数团活动类目" ng-model="param.groupbuy_options" max="1"
                              ng-show="param.category==4"
                              columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
-                             {'name': '类目', 'field': 'option_name'},
-                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
-                             {'name': '库存', 'field': 'option_inventory'},
-                             {'name': '排序', 'field': 'order_by',type:'number',min:'0'}]"></div>
+                             {'name': '类目', 'field': 'option_name',required:'true'},
+                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2',required:'true'},
+                             {'name': '库存', 'field': 'option_inventory',required:'true'},
+                             {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
                         <div form-radio text="是否支持陌生人拼团" type="radio" ng-model="param.group_strange" required="true"
                              default="2" source="[{text:'是',value:'2'},{text:'否',value:'1'}]"
                              ng-show="param.category!=3" source-api=""></div>
