--- a/app/scripts/views/container/login.html
+++ b/app/scripts/views/container/login.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <img src="styles/images/flat-avatar.png" class="user-avatar">
-            <h1>回家么管理系统</h1>
+            <h2>芝麻学社管理系统</h2>
             <form role="form" ng-keypress="login_keypress($event);">
                 <div class="form-content">
                     <div class="form-group">
@@ -14,9 +14,9 @@
                         <input type="password" ng-model="pwd" class="form-control input-underline input-lg"
                                placeholder="密码">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="display: flex;">
                         <input type="text" ng-model="usercode" class="form-control input-underline pull-left"
-                               placeholder="验证码" style="width:60%">
+                               placeholder="验证码" >
                         <a class="btn btn-white btn-outline pull-right" ng-click="get_verify_code()"
                            ng-disabled="disabled_get_verify_code">获取验证码
                             <span ng-if="remain_time<time_count" ng-bind="remain_time"></span>
