--- a/app/scripts/views/container/main.html
+++ b/app/scripts/views/container/main.html
@@ -15,11 +15,15 @@
     <section class="dashboard-page ng-scope">
         <aside id="sidebar">
             <!--<perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">-->
-                <side-menu></side-menu>
-                <!--<side-widgets></side-widgets>-->
+            <side-menu></side-menu>
+            <!--<side-widgets></side-widgets>-->
             <!--</perfect-scrollbar>-->
         </aside>
         <section id="body-container" ui-view>
         </section>
     </section>
+    <!--loading gif http-->
+    <div class="mod_http_msg" ng-show="http_notification">
+        <span ng-bind="http_notification"></span>
+    </div>
 </div>
