取消 营销短信 选项

--- a/app/scripts/views/biz/sms/add.html
+++ b/app/scripts/views/biz/sms/add.html
@@ -9,7 +9,7 @@
                     <div class="panel-body">
                         <h4>短信信息</h4>
                         <div form-radio text="是否为营销短信" ng-model="param.is_marketing" required="true"
-                             source="[{text:'是',value:'1'},{text:'否',value:'0'}]" default="1" ng-disabled="true"></div>
+                             source="[{text:'是',value:'1'},{text:'否',value:'0'}]" default="1"></div>
                         <div form-textarea text="短信内容" ng-model="param.content"
                              placeholder="短信内容" required="true"></div>
                         <div form-textarea text="发送用户" ng-model="mobiles"
